--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "tsmsogn@gmail.com"
         }
     ],
+    "license": "MIT",
     "require": {
         "illuminate/contracts": "^5.5 | ^6.0"
     },
