--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     ],
     "license": "MIT",
     "require": {
-        "illuminate/contracts": "^5.5 | ^6.0"
+        "illuminate/contracts": "^5.5|^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7",
-        "orchestra/testbench": "^3.8"
+        "phpunit/phpunit": "^7|^8|^9",
+        "orchestra/testbench": "^3.8|^4|^5|^6"
     },
     "autoload": {
         "psr-4": {
